Creacion modulo de configuracion del sistema

--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -60,13 +60,19 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-end user-dropdown-menu" aria-labelledby="userDropdown">
             <li>
-              <a class="dropdown-item"  (click)="goToMyProfile()">
+              <a class="dropdown-item" (click)="goToMyProfile()">
                 <i class="bi bi-person me-2"></i>Mi Perfil
               </a>
             </li>
             <li>
-              <a class="dropdown-item"  (click)="goToExchangeRate()">
+              <a class="dropdown-item" (click)="goToExchangeRate()">
                 <i class="bi bi-currency-exchange me-2"></i>Tipo de cambio
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" (click)="goToSystemConfig()">
+                <i class="bi bi-gear me-2"></i>Configuración del sistema
               </a>
             </li>
             <li>
