Error ExpressionChangedAfterItHasBeenCheckedError en el loader.service.ts

--- a/src/app/view/ventas/generar-venta/generar-venta.component.html
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.html
@@ -255,8 +255,8 @@
                                 <thead>
                                     <tr>
                                         <th class="text-center">Producto</th>
-                                        <th class="text-center">Precio Unitario</th>
-                                        <th class="text-center">Cantidad</th>
+                                        <th class="text-center">Precio Unit.</th>
+                                        <th class="text-center">Cant.</th>
                                         <th class="text-center">Subtotal</th>
                                         <th class="text-center">
                                             IVA <span class="text-muted">(16%)</span>
